--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,62 +3,62 @@
 en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "Votre email à bien été confirmé."
+      send_instructions: "Vous allez recevoir un mail contnant des instructions pour confirmer votre adresse mail."
+      send_paranoid_instructions: "Vous allez recevoir un mail contnant des instructions pour confirmer votre adresse mail."
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "Vous etes déjà connecté."
+      inactive: "Votre compte n'est pas encore activé."
+      invalid: "Invalide %{authentication_keys} ou mot de passe."
+      locked: "Votre compte est bloqué."
+      last_attempt: "Plus qu'une tentative avant que votre compte soit bloqué."
+      not_found_in_database: "Invalide %{authentication_keys} ou mot de passe."
+      timeout: "Votre session à expiré. Veuillez vous connecter pour cntinuer."
+      unauthenticated: "Vous devez etre connecté avant de pouvoir continuer."
+      unconfirmed: "Vous devez d'abord confirmer votre adresse mail avant de pouvoir continuer."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Insctructions de confirmations"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Instructions de changement de mot de passe"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Instructions pour dévérouiller"
       email_changed:
-        subject: "Email Changed"
+        subject: "Votre mail à bien été changé"
       password_change:
-        subject: "Password Changed"
+        subject: "Votre mot de passe à bien été changé"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "Nous n'arrivons pas à vous identifier depuis %{kind} parce que \"%{reason}\"."
+      success: "Identification réussis depuis le compte %{kind}."
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "Vous ne pouvez pas acceder à cette page sans avoir reçu un mail de changement de mot de passe. Si vous avez reçu un tel mail, assurez vous que vous avez bien rentré l'URL indiqué."
+      send_instructions: "Vous allez recevoir un mail contenant des instructions pour modifier votre mot de passe."
+      send_paranoid_instructions: "Vous allez recevoir un mail contenant des instructions pour modifier votre mot de passe."
+      updated: "Votre mot de passe à bien été changé. Vous etes maintenant connécté."
+      updated_not_active: "Votre mot de passe à bien été changé."
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Your account has been updated successfully."
+      destroyed: "Aurevoir! Votre compte à bien été supprimé. Nous espérons vous revoir bientot."
+      signed_up: "Bienvenue chez Lebontroc! Votre compte à bien été créé."
+      signed_up_but_inactive: "Bienvenue chez Lebontroc! Votre compte à bien été créé. Malheureusement, nous n'avons pas pu vous connecter parce que votre mail n'est pas encore confirmé."
+      signed_up_but_locked: "Bienvenue chez Lebontroc! Votre compte à bien été créé. Malheureusement, nous n'avons pas pu vous connecter parce que votre compte est bloqué."
+      signed_up_but_unconfirmed: "Un mail de confirmation vous à été envoyé. Merci de suivre les instructions pour activer votre compte."
+      update_needs_confirmation: "Votre compte à bien été mis à jour, mais nous avons besoin de confirmer votre nouvelle adresse mail. Merci de regarder vos mail et de suivre les instructions."
+      updated: "Votre compte à bien été mis à jour."
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "Connexion réussis."
+      signed_out: "Déconnexion réussis."
+      already_signed_out: "Déconnexion réussis."
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "Vous allez recevoir un mail contenant des instructions pour débloquer votre compte."
+      send_paranoid_instructions: "Vous allez recevoir un mail contenant des instructions pour débloquer votre compte."
+      unlocked: "Votre compte à bien été débloqué. Connectez vous pour continuer."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "déjà confirmé, merci d'essayer de vous connectez"
+      confirmation_period_expired: "besoin d'une confirmation avant %{period}, merci de demander une nouvelle confirmation"
+      expired: "éxpiré, merci de demandé une nouvelle confirmation"
+      not_found: "introuvable"
+      not_locked: "n'est pas bloqué"
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
